--- a/estilo.css
+++ b/estilo.css
@@ -52,13 +52,10 @@ body h2{
 	background-color: #f8cef7;
 	text-align: center;
 	margin-right: 25px;
-
-}
-#hoje p{
-	margin-top: 20px;
-	margin-left: 35px;
-	margin-right: 35px;
-	margin-bottom: 30px;
+	padding-bottom: 30px;
+	padding-left:35px;
+	padding-right:35px;
+	padding-top: 20px;
 }
 
 #hoje h3{
